--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -16,3 +16,8 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+/* all link icons */
+.nav-link i { padding-right:.3rem }
+/* management icon */
+.nav-link i.bi-gear { padding-right:0 }
